[gd_scene load_steps=5 format=2]

[ext_resource path="res://Bullet.gd" type="Script" id=1]
[ext_resource path="res://images/Bullet.png" type="Texture" id=2]
[ext_resource path="res://explosions/Explosion.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.34265, 2.60816 )

[node name="Bullet" type="Area2D"]
position = Vector2( 0.000461578, 0.0576725 )
collision_layer = 8
collision_mask = 4
script = ExtResource( 1 )
bullet_dur = 0.1
damage = 10

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.00206566, -0.00166798 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.06349, 0.210848 )
shape = SubResource( 1 )

[node name="BulletTimer" type="Timer" parent="."]

[node name="Explosion" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
